# legal-chunking

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  implementation-plan.md  project-scope.md
examples/output_samples/: eu_gdpr_sample.json  ru_consumer_sample.json  us_frcp_sample.json
src/legal_chunking/: __init__.py  api.py  cli.py  errors.py  hashing.py  manifest.py  models.py  normalize.py  numbering_markers.py  profiles.py  reference_context.py  reference_parser.py  references.py  runtime_policy.py
src/legal_chunking/assets/: __init__.py  manifest.v1.json
src/legal_chunking/assets/chunking_policy/: ae.v1.json  eu.v1.json  ru.v1.json  us.v1.json
src/legal_chunking/assets/guidance_extractors/: ru_review_case_refs.v1.json
src/legal_chunking/assets/guidance_patterns/: ru.v1.json
src/legal_chunking/assets/heading_patterns/: ae.v1.json  eu.v1.json  generic.v1.json  ru.v1.json  us.v1.json
src/legal_chunking/assets/numbering_markers/: eu.v1.json  generic.v1.json  ru.v1.json  us.v1.json
src/legal_chunking/assets/reference_patterns/: eu.v1.json  generic.v1.json  ru.v1.json  us.v1.json
src/legal_chunking/chunk/: __init__.py  legal.py  runtime.py  splitters.py
src/legal_chunking/detect/: __init__.py  definitions.py  guidance.py  guidance_metadata.py  guidance_normalization.py  heading_admissibility.py  heading_patterns.py  heading_runtime.py  heading_types.py  headings.py  rulebook.py  section_candidates.py  section_classify.py  section_common.py  section_guidance.py  section_runtime.py  sections.py
src/legal_chunking/extract/: __init__.py  pdf.py  pdf_candidates.py  pdf_classify.py  pdf_rules.py  pdf_runtime.py  pdf_state.py  pdf_types.py
src/legal_chunking/tracing/: __init__.py  models.py
tests/: test_api.py  test_headings.py  test_profiles.py  test_real_pdfs.py  test_references.py  test_sections.py
tests/fixtures/: ae_rule_example.txt  eu_statute_example.txt  review_ru_guidance.txt  us_rule_example.txt
