[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "legal-chunking"
version = "0.1.0"
description = "Structure-aware chunking for legal documents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "mks-hash", email = "mks.yakimov@gmail.com" }
]
keywords = [
  "legal",
  "chunking",
  "documents",
  "nlp",
  "rag",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
legal-chunking = "legal_chunking.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_chunking"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
